--- a/formulas/future_functions.html
+++ b/formulas/future_functions.html
@@ -164,14 +164,14 @@ section below.</p>
 </span><span class="boring">    let worksheet = workbook.add_worksheet();
 </span><span class="boring">
 </span><span class="boring">    // Write a future function without prefix. This gives an Excel error.
-</span>    worksheet.write_formula_only(0, 0, &quot;=STDEV.S(B1:B5)&quot;)?;
+</span>    worksheet.write_formula(0, 0, &quot;=STDEV.S(B1:B5)&quot;)?;
 <span class="boring">
 </span><span class="boring">    // Write some data for the function to operate on.
-</span><span class="boring">    worksheet.write_number_only(0, 1, 1.23)?;
-</span><span class="boring">    worksheet.write_number_only(1, 1, 1.03)?;
-</span><span class="boring">    worksheet.write_number_only(2, 1, 1.20)?;
-</span><span class="boring">    worksheet.write_number_only(3, 1, 1.15)?;
-</span><span class="boring">    worksheet.write_number_only(4, 1, 1.22)?;
+</span><span class="boring">    worksheet.write_number(0, 1, 1.23)?;
+</span><span class="boring">    worksheet.write_number(1, 1, 1.03)?;
+</span><span class="boring">    worksheet.write_number(2, 1, 1.20)?;
+</span><span class="boring">    worksheet.write_number(3, 1, 1.15)?;
+</span><span class="boring">    worksheet.write_number(4, 1, 1.22)?;
 </span><span class="boring">
 </span><span class="boring">    workbook.save(&quot;future_function.xlsx&quot;)?;
 </span><span class="boring">
@@ -193,14 +193,14 @@ section below.</p>
 </span><span class="boring">    let worksheet = workbook.add_worksheet();
 </span><span class="boring">
 </span><span class="boring">    // Write a future function with explicit prefix.
-</span>    worksheet.write_formula_only(0, 0, &quot;=_xlfn.STDEV.S(B1:B5)&quot;)?;
+</span>    worksheet.write_formula(0, 0, &quot;=_xlfn.STDEV.S(B1:B5)&quot;)?;
 <span class="boring">
 </span><span class="boring">    // Write some data for the function to operate on.
-</span><span class="boring">    worksheet.write_number_only(0, 1, 1.23)?;
-</span><span class="boring">    worksheet.write_number_only(1, 1, 1.03)?;
-</span><span class="boring">    worksheet.write_number_only(2, 1, 1.20)?;
-</span><span class="boring">    worksheet.write_number_only(3, 1, 1.15)?;
-</span><span class="boring">    worksheet.write_number_only(4, 1, 1.22)?;
+</span><span class="boring">    worksheet.write_number(0, 1, 1.23)?;
+</span><span class="boring">    worksheet.write_number(1, 1, 1.03)?;
+</span><span class="boring">    worksheet.write_number(2, 1, 1.20)?;
+</span><span class="boring">    worksheet.write_number(3, 1, 1.15)?;
+</span><span class="boring">    worksheet.write_number(4, 1, 1.22)?;
 </span><span class="boring">
 </span><span class="boring">    workbook.save(&quot;future_function.xlsx&quot;)?;
 </span><span class="boring">
@@ -225,14 +225,14 @@ have <code>rust_xlsxwriter</code> automatically handle future functions for you:
 </span><span class="boring">
 </span><span class="boring">    // Write a future function and automatically add the required prefix.
 </span>    worksheet.use_future_functions(true);
-    worksheet.write_formula_only(0, 0, &quot;=STDEV.S(B1:B5)&quot;)?;
+    worksheet.write_formula(0, 0, &quot;=STDEV.S(B1:B5)&quot;)?;
 <span class="boring">
 </span><span class="boring">    // Write some data for the function to operate on.
-</span><span class="boring">    worksheet.write_number_only(0, 1, 1.23)?;
-</span><span class="boring">    worksheet.write_number_only(1, 1, 1.03)?;
-</span><span class="boring">    worksheet.write_number_only(2, 1, 1.20)?;
-</span><span class="boring">    worksheet.write_number_only(3, 1, 1.15)?;
-</span><span class="boring">    worksheet.write_number_only(4, 1, 1.22)?;
+</span><span class="boring">    worksheet.write_number(0, 1, 1.23)?;
+</span><span class="boring">    worksheet.write_number(1, 1, 1.03)?;
+</span><span class="boring">    worksheet.write_number(2, 1, 1.20)?;
+</span><span class="boring">    worksheet.write_number(3, 1, 1.15)?;
+</span><span class="boring">    worksheet.write_number(4, 1, 1.22)?;
 </span><span class="boring">
 </span><span class="boring">    workbook.save(&quot;future_function.xlsx&quot;)?;
 </span><span class="boring">
