--- a/formulas/intro.html
+++ b/formulas/intro.html
@@ -155,10 +155,10 @@
 </span><span class="boring">    let mut workbook = Workbook::new();
 </span><span class="boring">    let worksheet = workbook.add_worksheet();
 </span><span class="boring">
-</span>    worksheet.write_formula_only(0, 0, &quot;=10*B1 + C1&quot;)?;
+</span>    worksheet.write_formula(0, 0, &quot;=10*B1 + C1&quot;)?;
 
-    worksheet.write_number_only(0, 1, 5)?;
-    worksheet.write_number_only(0, 2, 1)?;
+    worksheet.write_number(0, 1, 5)?;
+    worksheet.write_number(0, 2, 1)?;
 <span class="boring">
 </span><span class="boring">    workbook.save(&quot;formula.xlsx&quot;)?;
 </span><span class="boring">
