--- a/autofilters/autofilters.html
+++ b/autofilters/autofilters.html
@@ -385,18 +385,18 @@ that some data is shown and some is hidden.</p>
 </span><span class="boring">
 </span><span class="boring">    // Write the header titles.
 </span><span class="boring">    let header_format = Format::new().set_bold();
-</span><span class="boring">    worksheet.write_string(0, 0, &quot;Region&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 1, &quot;Item&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 2, &quot;Volume&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 3, &quot;Month&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 0, &quot;Region&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 1, &quot;Item&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 2, &quot;Volume&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 3, &quot;Month&quot;, &amp;header_format)?;
 </span><span class="boring">
 </span><span class="boring">    // Write the other worksheet data.
 </span><span class="boring">    for (row, data) in data.iter().enumerate() {
 </span><span class="boring">        let row = 1 + row as u32;
-</span><span class="boring">        worksheet.write_string_only(row, 0, data.0)?;
-</span><span class="boring">        worksheet.write_string_only(row, 1, data.1)?;
-</span><span class="boring">        worksheet.write_number_only(row, 2, data.2)?;
-</span><span class="boring">        worksheet.write_string_only(row, 3, data.3)?;
+</span><span class="boring">        worksheet.write_string(row, 0, data.0)?;
+</span><span class="boring">        worksheet.write_string(row, 1, data.1)?;
+</span><span class="boring">        worksheet.write_number(row, 2, data.2)?;
+</span><span class="boring">        worksheet.write_string(row, 3, data.3)?;
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    Ok(())
@@ -656,18 +656,18 @@ region in the first column:</p>
 </span><span class="boring">
 </span><span class="boring">    // Write the header titles.
 </span><span class="boring">    let header_format = Format::new().set_bold();
-</span><span class="boring">    worksheet.write_string(0, 0, &quot;Region&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 1, &quot;Item&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 2, &quot;Volume&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 3, &quot;Month&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 0, &quot;Region&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 1, &quot;Item&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 2, &quot;Volume&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 3, &quot;Month&quot;, &amp;header_format)?;
 </span><span class="boring">
 </span><span class="boring">    // Write the other worksheet data.
 </span><span class="boring">    for (row, data) in data.iter().enumerate() {
 </span><span class="boring">        let row = 1 + row as u32;
-</span><span class="boring">        worksheet.write_string_only(row, 0, data.0)?;
-</span><span class="boring">        worksheet.write_string_only(row, 1, data.1)?;
-</span><span class="boring">        worksheet.write_number_only(row, 2, data.2)?;
-</span><span class="boring">        worksheet.write_string_only(row, 3, data.3)?;
+</span><span class="boring">        worksheet.write_string(row, 0, data.0)?;
+</span><span class="boring">        worksheet.write_string(row, 1, data.1)?;
+</span><span class="boring">        worksheet.write_number(row, 2, data.2)?;
+</span><span class="boring">        worksheet.write_string(row, 3, data.3)?;
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    Ok(())
@@ -913,18 +913,18 @@ the dropdown arrow and the non matching rows are filtered out:</p>
 </span><span class="boring">
 </span><span class="boring">    // Write the header titles.
 </span><span class="boring">    let header_format = Format::new().set_bold();
-</span><span class="boring">    worksheet.write_string(0, 0, &quot;Region&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 1, &quot;Item&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 2, &quot;Volume&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 3, &quot;Month&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 0, &quot;Region&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 1, &quot;Item&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 2, &quot;Volume&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 3, &quot;Month&quot;, &amp;header_format)?;
 </span><span class="boring">
 </span><span class="boring">    // Write the other worksheet data.
 </span><span class="boring">    for (row, data) in data.iter().enumerate() {
 </span><span class="boring">        let row = 1 + row as u32;
-</span><span class="boring">        worksheet.write_string_only(row, 0, data.0)?;
-</span><span class="boring">        worksheet.write_string_only(row, 1, data.1)?;
-</span><span class="boring">        worksheet.write_number_only(row, 2, data.2)?;
-</span><span class="boring">        worksheet.write_string_only(row, 3, data.3)?;
+</span><span class="boring">        worksheet.write_string(row, 0, data.0)?;
+</span><span class="boring">        worksheet.write_string(row, 1, data.1)?;
+</span><span class="boring">        worksheet.write_number(row, 2, data.2)?;
+</span><span class="boring">        worksheet.write_string(row, 3, data.3)?;
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    Ok(())
@@ -1170,18 +1170,18 @@ or on their own using <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxw
 </span><span class="boring">
 </span><span class="boring">    // Write the header titles.
 </span><span class="boring">    let header_format = Format::new().set_bold();
-</span><span class="boring">    worksheet.write_string(0, 0, &quot;Region&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 1, &quot;Item&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 2, &quot;Volume&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 3, &quot;Month&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 0, &quot;Region&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 1, &quot;Item&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 2, &quot;Volume&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 3, &quot;Month&quot;, &amp;header_format)?;
 </span><span class="boring">
 </span><span class="boring">    // Write the other worksheet data.
 </span><span class="boring">    for (row, data) in data.iter().enumerate() {
 </span><span class="boring">        let row = 1 + row as u32;
-</span><span class="boring">        worksheet.write_string_only(row, 0, data.0)?;
-</span><span class="boring">        worksheet.write_string_only(row, 1, data.1)?;
-</span><span class="boring">        worksheet.write_number_only(row, 2, data.2)?;
-</span><span class="boring">        worksheet.write_string_only(row, 3, data.3)?;
+</span><span class="boring">        worksheet.write_string(row, 0, data.0)?;
+</span><span class="boring">        worksheet.write_string(row, 1, data.1)?;
+</span><span class="boring">        worksheet.write_number(row, 2, data.2)?;
+</span><span class="boring">        worksheet.write_string(row, 3, data.3)?;
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    Ok(())
@@ -1427,18 +1427,18 @@ only:</p>
 </span><span class="boring">
 </span><span class="boring">    // Write the header titles.
 </span><span class="boring">    let header_format = Format::new().set_bold();
-</span><span class="boring">    worksheet.write_string(0, 0, &quot;Region&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 1, &quot;Item&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 2, &quot;Volume&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 3, &quot;Month&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 0, &quot;Region&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 1, &quot;Item&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 2, &quot;Volume&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 3, &quot;Month&quot;, &amp;header_format)?;
 </span><span class="boring">
 </span><span class="boring">    // Write the other worksheet data.
 </span><span class="boring">    for (row, data) in data.iter().enumerate() {
 </span><span class="boring">        let row = 1 + row as u32;
-</span><span class="boring">        worksheet.write_string_only(row, 0, data.0)?;
-</span><span class="boring">        worksheet.write_string_only(row, 1, data.1)?;
-</span><span class="boring">        worksheet.write_number_only(row, 2, data.2)?;
-</span><span class="boring">        worksheet.write_string_only(row, 3, data.3)?;
+</span><span class="boring">        worksheet.write_string(row, 0, data.0)?;
+</span><span class="boring">        worksheet.write_string(row, 1, data.1)?;
+</span><span class="boring">        worksheet.write_number(row, 2, data.2)?;
+</span><span class="boring">        worksheet.write_string(row, 3, data.3)?;
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    Ok(())
@@ -1688,18 +1688,18 @@ criteria/operators are set using the <a href="https://docs.rs/rust_xlsxwriter/la
 </span><span class="boring">
 </span><span class="boring">    // Write the header titles.
 </span><span class="boring">    let header_format = Format::new().set_bold();
-</span><span class="boring">    worksheet.write_string(0, 0, &quot;Region&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 1, &quot;Item&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 2, &quot;Volume&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 3, &quot;Month&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 0, &quot;Region&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 1, &quot;Item&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 2, &quot;Volume&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 3, &quot;Month&quot;, &amp;header_format)?;
 </span><span class="boring">
 </span><span class="boring">    // Write the other worksheet data.
 </span><span class="boring">    for (row, data) in data.iter().enumerate() {
 </span><span class="boring">        let row = 1 + row as u32;
-</span><span class="boring">        worksheet.write_string_only(row, 0, data.0)?;
-</span><span class="boring">        worksheet.write_string_only(row, 1, data.1)?;
-</span><span class="boring">        worksheet.write_number_only(row, 2, data.2)?;
-</span><span class="boring">        worksheet.write_string_only(row, 3, data.3)?;
+</span><span class="boring">        worksheet.write_string(row, 0, data.0)?;
+</span><span class="boring">        worksheet.write_string(row, 1, data.1)?;
+</span><span class="boring">        worksheet.write_number(row, 2, data.2)?;
+</span><span class="boring">        worksheet.write_string(row, 3, data.3)?;
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    Ok(())
@@ -1944,18 +1944,18 @@ criteria/operators are set using the <a href="https://docs.rs/rust_xlsxwriter/la
 </span><span class="boring">
 </span><span class="boring">    // Write the header titles.
 </span><span class="boring">    let header_format = Format::new().set_bold();
-</span><span class="boring">    worksheet.write_string(0, 0, &quot;Region&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 1, &quot;Item&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 2, &quot;Volume&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 3, &quot;Month&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 0, &quot;Region&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 1, &quot;Item&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 2, &quot;Volume&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 3, &quot;Month&quot;, &amp;header_format)?;
 </span><span class="boring">
 </span><span class="boring">    // Write the other worksheet data.
 </span><span class="boring">    for (row, data) in data.iter().enumerate() {
 </span><span class="boring">        let row = 1 + row as u32;
-</span><span class="boring">        worksheet.write_string_only(row, 0, data.0)?;
-</span><span class="boring">        worksheet.write_string_only(row, 1, data.1)?;
-</span><span class="boring">        worksheet.write_number_only(row, 2, data.2)?;
-</span><span class="boring">        worksheet.write_string_only(row, 3, data.3)?;
+</span><span class="boring">        worksheet.write_string(row, 0, data.0)?;
+</span><span class="boring">        worksheet.write_string(row, 1, data.1)?;
+</span><span class="boring">        worksheet.write_number(row, 2, data.2)?;
+</span><span class="boring">        worksheet.write_string(row, 3, data.3)?;
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    Ok(())
@@ -2205,18 +2205,18 @@ is to filter all the unique non-blank strings/numbers in the column.</p>
 </span><span class="boring">
 </span><span class="boring">    // Write the header titles.
 </span><span class="boring">    let header_format = Format::new().set_bold();
-</span><span class="boring">    worksheet.write_string(0, 0, &quot;Region&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 1, &quot;Item&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 2, &quot;Volume&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 3, &quot;Month&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 0, &quot;Region&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 1, &quot;Item&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 2, &quot;Volume&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 3, &quot;Month&quot;, &amp;header_format)?;
 </span><span class="boring">
 </span><span class="boring">    // Write the other worksheet data.
 </span><span class="boring">    for (row, data) in data.iter().enumerate() {
 </span><span class="boring">        let row = 1 + row as u32;
-</span><span class="boring">        worksheet.write_string_only(row, 0, data.0)?;
-</span><span class="boring">        worksheet.write_string_only(row, 1, data.1)?;
-</span><span class="boring">        worksheet.write_number_only(row, 2, data.2)?;
-</span><span class="boring">        worksheet.write_string_only(row, 3, data.3)?;
+</span><span class="boring">        worksheet.write_string(row, 0, data.0)?;
+</span><span class="boring">        worksheet.write_string(row, 1, data.1)?;
+</span><span class="boring">        worksheet.write_number(row, 2, data.2)?;
+</span><span class="boring">        worksheet.write_string(row, 3, data.3)?;
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    Ok(())
@@ -2460,18 +2460,18 @@ custom filter to get the same result:</p>
 </span><span class="boring">
 </span><span class="boring">    // Write the header titles.
 </span><span class="boring">    let header_format = Format::new().set_bold();
-</span><span class="boring">    worksheet.write_string(0, 0, &quot;Region&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 1, &quot;Item&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 2, &quot;Volume&quot;, &amp;header_format)?;
-</span><span class="boring">    worksheet.write_string(0, 3, &quot;Month&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 0, &quot;Region&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 1, &quot;Item&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 2, &quot;Volume&quot;, &amp;header_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 3, &quot;Month&quot;, &amp;header_format)?;
 </span><span class="boring">
 </span><span class="boring">    // Write the other worksheet data.
 </span><span class="boring">    for (row, data) in data.iter().enumerate() {
 </span><span class="boring">        let row = 1 + row as u32;
-</span><span class="boring">        worksheet.write_string_only(row, 0, data.0)?;
-</span><span class="boring">        worksheet.write_string_only(row, 1, data.1)?;
-</span><span class="boring">        worksheet.write_number_only(row, 2, data.2)?;
-</span><span class="boring">        worksheet.write_string_only(row, 3, data.3)?;
+</span><span class="boring">        worksheet.write_string(row, 0, data.0)?;
+</span><span class="boring">        worksheet.write_string(row, 1, data.1)?;
+</span><span class="boring">        worksheet.write_number(row, 2, data.2)?;
+</span><span class="boring">        worksheet.write_string(row, 3, data.3)?;
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    Ok(())
