--- a/examples/autofit.html
+++ b/examples/autofit.html
@@ -164,16 +164,16 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     let worksheet = workbook.add_worksheet();
 
     // Write some worksheet data to demonstrate autofitting.
-    worksheet.write_string_only(0, 0, &quot;Foo&quot;)?;
-    worksheet.write_string_only(1, 0, &quot;Food&quot;)?;
-    worksheet.write_string_only(2, 0, &quot;Foody&quot;)?;
-    worksheet.write_string_only(3, 0, &quot;Froody&quot;)?;
+    worksheet.write_string(0, 0, &quot;Foo&quot;)?;
+    worksheet.write_string(1, 0, &quot;Food&quot;)?;
+    worksheet.write_string(2, 0, &quot;Foody&quot;)?;
+    worksheet.write_string(3, 0, &quot;Froody&quot;)?;
 
-    worksheet.write_number_only(0, 1, 12345)?;
-    worksheet.write_number_only(1, 1, 12345678)?;
-    worksheet.write_number_only(2, 1, 12345)?;
+    worksheet.write_number(0, 1, 12345)?;
+    worksheet.write_number(1, 1, 12345678)?;
+    worksheet.write_number(2, 1, 12345)?;
 
-    worksheet.write_string_only(0, 2, &quot;Some longer text&quot;)?;
+    worksheet.write_string(0, 2, &quot;Some longer text&quot;)?;
 
     worksheet.write_url(0, 3, &quot;http://ww.google.com&quot;)?;
     worksheet.write_url(1, 3, &quot;https://github.com&quot;)?;
