--- a/examples/doc_properties.html
+++ b/examples/doc_properties.html
@@ -154,12 +154,12 @@ rust_xlsxwriter library.</p>
 </span><span class="boring">//! An example of setting workbook document properties for a file created using
 </span><span class="boring">//! the rust_xlsxwriter library.
 </span><span class="boring">
-</span>use rust_xlsxwriter::{Properties, Workbook, XlsxError};
+</span>use rust_xlsxwriter::{DocProperties, Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     let mut workbook = Workbook::new();
 
-    let properties = Properties::new()
+    let properties = DocProperties::new()
         .set_title(&quot;This is an example spreadsheet&quot;)
         .set_subject(&quot;That demonstrates document properties&quot;)
         .set_author(&quot;A. Rust User&quot;)
@@ -174,7 +174,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     let worksheet = workbook.add_worksheet();
 
     worksheet.set_column_width(0, 30)?;
-    worksheet.write_string_only(0, 0, &quot;See File -&gt; Info -&gt; Properties&quot;)?;
+    worksheet.write_string(0, 0, &quot;See File -&gt; Info -&gt; Properties&quot;)?;
 
     workbook.save(&quot;doc_properties.xlsx&quot;)?;
 
