--- a/examples/hyperlinks.html
+++ b/examples/hyperlinks.html
@@ -156,7 +156,7 @@ the workbook.</p>
 </span><span class="boring">//! A simple, getting started, example of some of the features of the
 </span><span class="boring">//! rust_xlsxwriter library.
 </span><span class="boring">
-</span>use rust_xlsxwriter::{Format, Workbook, XlsxColor, XlsxError, XlsxUnderline};
+</span>use rust_xlsxwriter::{Format, FormatUnderline, Workbook, XlsxColor, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
@@ -165,7 +165,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a format to use in the worksheet.
     let link_format = Format::new()
         .set_font_color(XlsxColor::Red)
-        .set_underline(XlsxUnderline::Single);
+        .set_underline(FormatUnderline::Single);
 
     // Add a worksheet to the workbook.
     let worksheet1 = workbook.add_worksheet();
@@ -188,7 +188,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
 
     // Add another sheet to link to.
     let worksheet2 = workbook.add_worksheet();
-    worksheet2.write_string_only(3, 2, &quot;Here I am&quot;)?;
+    worksheet2.write_string(3, 2, &quot;Here I am&quot;)?;
     worksheet2.write_url_with_text(4, 2, &quot;internal:Sheet1!A6&quot;, &quot;Go back&quot;)?;
 
     // Save the file to disk.
