--- a/examples/merge_range.html
+++ b/examples/merge_range.html
@@ -156,7 +156,7 @@ types, such as number, as shown below.</p>
 </span><span class="boring">//! An example of creating merged ranges in a worksheet using the
 </span><span class="boring">//! rust_xlsxwriter library.
 </span><span class="boring">
-</span>use rust_xlsxwriter::{Format, Workbook, XlsxAlign, XlsxBorder, XlsxColor, XlsxError};
+</span>use rust_xlsxwriter::{Format, FormatAlign, FormatBorder, Workbook, XlsxColor, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
@@ -164,27 +164,27 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     let worksheet = workbook.add_worksheet();
 
     // Write some merged cells with centering.
-    let format = Format::new().set_align(XlsxAlign::Center);
+    let format = Format::new().set_align(FormatAlign::Center);
 
     worksheet.merge_range(1, 1, 1, 2, &quot;Merged cells&quot;, &amp;format)?;
 
     // Write some merged cells with centering and a border.
     let format = Format::new()
-        .set_align(XlsxAlign::Center)
-        .set_border(XlsxBorder::Thin);
+        .set_align(FormatAlign::Center)
+        .set_border(FormatBorder::Thin);
 
     worksheet.merge_range(3, 1, 3, 2, &quot;Merged cells&quot;, &amp;format)?;
 
     // Write some merged cells with a number by overwriting the first cell in
     // the string merge range with the formatted number.
     worksheet.merge_range(5, 1, 5, 2, &quot;&quot;, &amp;format)?;
-    worksheet.write_number(5, 1, 12345.67, &amp;format)?;
+    worksheet.write_number_with_format(5, 1, 12345.67, &amp;format)?;
 
     // Example with a more complex format and larger range.
     let format = Format::new()
-        .set_align(XlsxAlign::Center)
-        .set_align(XlsxAlign::VerticalCenter)
-        .set_border(XlsxBorder::Thin)
+        .set_align(FormatAlign::Center)
+        .set_align(FormatAlign::VerticalCenter)
+        .set_border(FormatBorder::Thin)
         .set_background_color(XlsxColor::Silver);
 
     worksheet.merge_range(7, 1, 8, 3, &quot;Merged cells&quot;, &amp;format)?;
