--- a/format/intro.html
+++ b/format/intro.html
@@ -154,7 +154,7 @@ borders, alignment and number formatting.</p>
 </span><span class="boring">//! The following example demonstrates some of the available formatting
 </span><span class="boring">//! properties.
 </span><span class="boring">
-</span>use rust_xlsxwriter::{Format, Workbook, XlsxBorder, XlsxColor, XlsxError};
+</span>use rust_xlsxwriter::{Format, FormatBorder, Workbook, XlsxColor, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
@@ -168,34 +168,34 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
 
     // Create some sample formats to display
     let format1 = Format::new().set_font_name(&quot;Arial&quot;);
-    worksheet.write_string(0, 0, &quot;Fonts&quot;, &amp;format1)?;
+    worksheet.write_string_with_format(0, 0, &quot;Fonts&quot;, &amp;format1)?;
 
     let format2 = Format::new().set_font_name(&quot;Algerian&quot;).set_font_size(14);
-    worksheet.write_string(1, 0, &quot;Fonts&quot;, &amp;format2)?;
+    worksheet.write_string_with_format(1, 0, &quot;Fonts&quot;, &amp;format2)?;
 
     let format3 = Format::new().set_font_name(&quot;Comic Sans MS&quot;);
-    worksheet.write_string(2, 0, &quot;Fonts&quot;, &amp;format3)?;
+    worksheet.write_string_with_format(2, 0, &quot;Fonts&quot;, &amp;format3)?;
 
     let format4 = Format::new().set_font_name(&quot;Edwardian Script ITC&quot;);
-    worksheet.write_string(3, 0, &quot;Fonts&quot;, &amp;format4)?;
+    worksheet.write_string_with_format(3, 0, &quot;Fonts&quot;, &amp;format4)?;
 
     let format5 = Format::new().set_font_color(XlsxColor::Red);
-    worksheet.write_string(4, 0, &quot;Font color&quot;, &amp;format5)?;
+    worksheet.write_string_with_format(4, 0, &quot;Font color&quot;, &amp;format5)?;
 
     let format6 = Format::new().set_background_color(XlsxColor::RGB(0xDAA520));
-    worksheet.write_string(5, 0, &quot;Fills&quot;, &amp;format6)?;
+    worksheet.write_string_with_format(5, 0, &quot;Fills&quot;, &amp;format6)?;
 
-    let format7 = Format::new().set_border(XlsxBorder::Thin);
-    worksheet.write_string(6, 0, &quot;Borders&quot;, &amp;format7)?;
+    let format7 = Format::new().set_border(FormatBorder::Thin);
+    worksheet.write_string_with_format(6, 0, &quot;Borders&quot;, &amp;format7)?;
 
     let format8 = Format::new().set_bold();
-    worksheet.write_string(7, 0, &quot;Bold&quot;, &amp;format8)?;
+    worksheet.write_string_with_format(7, 0, &quot;Bold&quot;, &amp;format8)?;
 
     let format9 = Format::new().set_italic();
-    worksheet.write_string(8, 0, &quot;Italic&quot;, &amp;format9)?;
+    worksheet.write_string_with_format(8, 0, &quot;Italic&quot;, &amp;format9)?;
 
     let format10 = Format::new().set_bold().set_italic();
-    worksheet.write_string(9, 0, &quot;Bold and Italic&quot;, &amp;format10)?;
+    worksheet.write_string_with_format(9, 0, &quot;Bold and Italic&quot;, &amp;format10)?;
 
     workbook.save(&quot;formats.xlsx&quot;)?;
 
