--- a/getting_started.html
+++ b/getting_started.html
@@ -184,10 +184,10 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     let worksheet = workbook.add_worksheet();
 
     // Write a string to cell (0, 0) = A1.
-    worksheet.write_string_only(0, 0, &quot;Hello&quot;)?;
+    worksheet.write_string(0, 0, &quot;Hello&quot;)?;
 
     // Write a number to cell (1, 0) = A2.
-    worksheet.write_number_only(1, 0, 12345)?;
+    worksheet.write_number(1, 0, 12345)?;
 
     // Save the file to disk.
     workbook.save(&quot;hello.xlsx&quot;)?;
