--- a/performance.html
+++ b/performance.html
@@ -188,9 +188,9 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     for row in 0..row_max {
         for col in 0..col_max {
             if col % 2 == 1 {
-                worksheet.write_string_only(row, col, &quot;Foo&quot;)?;
+                worksheet.write_string(row, col, &quot;Foo&quot;)?;
             } else {
-                worksheet.write_number_only(row, col, 12345.0)?;
+                worksheet.write_number(row, col, 12345.0)?;
             }
         }
     }
