--- a/tutorial/tutorial3.html
+++ b/tutorial/tutorial3.html
@@ -178,9 +178,9 @@
 </span><span class="boring">    let worksheet = workbook.add_worksheet();
 </span><span class="boring">
 </span><span class="boring">    // Write some column headers.
-</span><span class="boring">    worksheet.write_string(0, 0, &quot;Item&quot;, &amp;bold)?;
-</span><span class="boring">    worksheet.write_string(0, 1, &quot;Cost&quot;, &amp;bold)?;
-</span><span class="boring">    worksheet.write_string(0, 2, &quot;Date&quot;, &amp;bold)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 0, &quot;Item&quot;, &amp;bold)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 1, &quot;Cost&quot;, &amp;bold)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 2, &quot;Date&quot;, &amp;bold)?;
 </span><span class="boring">
 </span><span class="boring">    // Adjust the date column width for clarity.
 </span><span class="boring">    worksheet.set_column_width(2, 15)?;
@@ -188,8 +188,8 @@
 </span><span class="boring">    // Iterate over the data and write it out row by row.
 </span><span class="boring">    let mut row = 1;
 </span><span class="boring">    for expense in expenses.iter() {
-</span><span class="boring">        worksheet.write_string_only(row, 0, expense.0)?;
-</span><span class="boring">        worksheet.write_number(row, 1, expense.1, &amp;money_format)?;
+</span><span class="boring">        worksheet.write_string(row, 0, expense.0)?;
+</span><span class="boring">        worksheet.write_number_with_format(row, 1, expense.1, &amp;money_format)?;
 </span><span class="boring">
 </span><span class="boring">        let date = NaiveDate::parse_from_str(expense.2, &quot;%Y-%m-%d&quot;).unwrap();
 </span><span class="boring">        worksheet.write_date(row, 2, &amp;date, &amp;date_format)?;
@@ -198,8 +198,8 @@
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    // Write a total using a formula.
-</span><span class="boring">    worksheet.write_string(row, 0, &quot;Total&quot;, &amp;bold)?;
-</span><span class="boring">    worksheet.write_formula(row, 1, &quot;=SUM(B2:B5)&quot;, &amp;money_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(row, 0, &quot;Total&quot;, &amp;bold)?;
+</span><span class="boring">    worksheet.write_formula_with_format(row, 1, &quot;=SUM(B2:B5)&quot;, &amp;money_format)?;
 </span><span class="boring">
 </span><span class="boring">    // Save the file to disk.
 </span><span class="boring">    workbook.save(&quot;tutorial3.xlsx&quot;)?;
@@ -246,9 +246,9 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     let worksheet = workbook.add_worksheet();
 
     // Write some column headers.
-    worksheet.write_string(0, 0, &quot;Item&quot;, &amp;bold)?;
-    worksheet.write_string(0, 1, &quot;Cost&quot;, &amp;bold)?;
-    worksheet.write_string(0, 2, &quot;Date&quot;, &amp;bold)?;
+    worksheet.write_string_with_format(0, 0, &quot;Item&quot;, &amp;bold)?;
+    worksheet.write_string_with_format(0, 1, &quot;Cost&quot;, &amp;bold)?;
+    worksheet.write_string_with_format(0, 2, &quot;Date&quot;, &amp;bold)?;
 
     // Adjust the date column width for clarity.
     worksheet.set_column_width(2, 15)?;
@@ -256,8 +256,8 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Iterate over the data and write it out row by row.
     let mut row = 1;
     for expense in expenses.iter() {
-        worksheet.write_string_only(row, 0, expense.0)?;
-        worksheet.write_number(row, 1, expense.1, &amp;money_format)?;
+        worksheet.write_string(row, 0, expense.0)?;
+        worksheet.write_number_with_format(row, 1, expense.1, &amp;money_format)?;
 
         let date = NaiveDate::parse_from_str(expense.2, &quot;%Y-%m-%d&quot;).unwrap();
         worksheet.write_date(row, 2, &amp;date, &amp;date_format)?;
@@ -266,8 +266,8 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     }
 
     // Write a total using a formula.
-    worksheet.write_string(row, 0, &quot;Total&quot;, &amp;bold)?;
-    worksheet.write_formula(row, 1, &quot;=SUM(B2:B5)&quot;, &amp;money_format)?;
+    worksheet.write_string_with_format(row, 0, &quot;Total&quot;, &amp;bold)?;
+    worksheet.write_formula_with_format(row, 1, &quot;=SUM(B2:B5)&quot;, &amp;money_format)?;
 
     // Save the file to disk.
     workbook.save(&quot;tutorial3.xlsx&quot;)?;
@@ -316,9 +316,9 @@ input data and then format it, in Excel, with a number format.</p>
 </span><span class="boring">    let worksheet = workbook.add_worksheet();
 </span><span class="boring">
 </span><span class="boring">    // Write some column headers.
-</span><span class="boring">    worksheet.write_string(0, 0, &quot;Item&quot;, &amp;bold)?;
-</span><span class="boring">    worksheet.write_string(0, 1, &quot;Cost&quot;, &amp;bold)?;
-</span><span class="boring">    worksheet.write_string(0, 2, &quot;Date&quot;, &amp;bold)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 0, &quot;Item&quot;, &amp;bold)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 1, &quot;Cost&quot;, &amp;bold)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 2, &quot;Date&quot;, &amp;bold)?;
 </span><span class="boring">
 </span><span class="boring">    // Adjust the date column width for clarity.
 </span><span class="boring">    worksheet.set_column_width(2, 15)?;
@@ -326,8 +326,8 @@ input data and then format it, in Excel, with a number format.</p>
 </span><span class="boring">    // Iterate over the data and write it out row by row.
 </span><span class="boring">    let mut row = 1;
 </span><span class="boring">    for expense in expenses.iter() {
-</span><span class="boring">        worksheet.write_string_only(row, 0, expense.0)?;
-</span><span class="boring">        worksheet.write_number(row, 1, expense.1, &amp;money_format)?;
+</span><span class="boring">        worksheet.write_string(row, 0, expense.0)?;
+</span><span class="boring">        worksheet.write_number_with_format(row, 1, expense.1, &amp;money_format)?;
 </span><span class="boring">
 </span><span class="boring">        let date = NaiveDate::parse_from_str(expense.2, &quot;%Y-%m-%d&quot;).unwrap();
 </span><span class="boring">        worksheet.write_date(row, 2, &amp;date, &amp;date_format)?;
@@ -336,8 +336,8 @@ input data and then format it, in Excel, with a number format.</p>
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    // Write a total using a formula.
-</span><span class="boring">    worksheet.write_string(row, 0, &quot;Total&quot;, &amp;bold)?;
-</span><span class="boring">    worksheet.write_formula(row, 1, &quot;=SUM(B2:B5)&quot;, &amp;money_format)?;
+</span><span class="boring">    worksheet.write_string_with_format(row, 0, &quot;Total&quot;, &amp;bold)?;
+</span><span class="boring">    worksheet.write_formula_with_format(row, 1, &quot;=SUM(B2:B5)&quot;, &amp;money_format)?;
 </span><span class="boring">
 </span><span class="boring">    // Save the file to disk.
 </span><span class="boring">    workbook.save(&quot;tutorial3.xlsx&quot;)?;
