--- a/worksheet/intro.html
+++ b/worksheet/intro.html
@@ -152,7 +152,7 @@
 </span><span class="boring">//! rust_xlsxwriter library.
 </span><span class="boring">
 </span>use chrono::NaiveDate;
-use rust_xlsxwriter::{Format, Image, Workbook, XlsxAlign, XlsxBorder, XlsxError};
+use rust_xlsxwriter::{Format, FormatAlign, FormatBorder, Image, Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Create a new Excel file object.
@@ -163,8 +163,8 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     let decimal_format = Format::new().set_num_format(&quot;0.000&quot;);
     let date_format = Format::new().set_num_format(&quot;yyyy-mm-dd&quot;);
     let merge_format = Format::new()
-        .set_border(XlsxBorder::Thin)
-        .set_align(XlsxAlign::Center);
+        .set_border(FormatBorder::Thin)
+        .set_align(FormatAlign::Center);
 
     // Add a worksheet to the workbook.
     let worksheet = workbook.add_worksheet();
@@ -173,20 +173,20 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     worksheet.set_column_width(0, 22)?;
 
     // Write a string without formatting.
-    worksheet.write_string_only(0, 0, &quot;Hello&quot;)?;
+    worksheet.write_string(0, 0, &quot;Hello&quot;)?;
 
     // Write a string with the bold format defined above.
-    worksheet.write_string(1, 0, &quot;World&quot;, &amp;bold_format)?;
+    worksheet.write_string_with_format(1, 0, &quot;World&quot;, &amp;bold_format)?;
 
     // Write some numbers.
-    worksheet.write_number_only(2, 0, 1)?;
-    worksheet.write_number_only(3, 0, 2.34)?;
+    worksheet.write_number(2, 0, 1)?;
+    worksheet.write_number(3, 0, 2.34)?;
 
     // Write a number with formatting.
-    worksheet.write_number(4, 0, 3.00, &amp;decimal_format)?;
+    worksheet.write_number_with_format(4, 0, 3.00, &amp;decimal_format)?;
 
     // Write a formula.
-    worksheet.write_formula_only(5, 0, &quot;=SIN(PI()/4)&quot;)?;
+    worksheet.write_formula(5, 0, &quot;=SIN(PI()/4)&quot;)?;
 
     // Write a date.
     let date = NaiveDate::from_ymd_opt(2023, 1, 25).unwrap();
